@@ -258,3 +258,5 @@ INSTALL(
   FILES       CHANGES 
               LICENSE
   DESTINATION ${OPENJPEG_INSTALL_DOC_DIR})
+
+INCLUDE (CMake/OpenJPEGCPack.cmake)
